<resources>
    <string name="app_name">In My Closet</string>
    <string name="app_name_start_screen">In My\nCloset</string>
    <string name="title_activity_navdrawer">Organize Your Closet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="closet">Closet</string>
    <string name="calendar">Calendar</string>
    <string name="shop">Shop</string>
    <string name="menu">Menu</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="itemcount">Item Count</string>
    <string name="totalvalue">Total Value</string>
    <string name="mostwornitem">Most Worn Item</string>
    <string name="howtousethisapp">How to use this app?</string>
    <string name="helpcontent">Thank you for using  In My Closet  app!</string>
    <string name="rating">Your rating will appear here.</string>
    <string name="submit">Submit</string>
    <string name="yourrating">Your rating is: </string>
    <string name="kind">Kind:</string>
    <string name="category">Category:</string>
    <string name="email_feedback">Give Feedback</string>
    <string name="price">Price:</string>
    <string name="worn">Wear Date:</string>
    <string name="season">Season:</string>
    <string name="size">Size:</string>
    <string name="brand">Brand:</string>
    <string name="owner">Owner:</string>
    <string name="boughtDate">Bought Date:</string>
    <string name="rate">Rate item:</string>
    <string name="note">Notes:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="selectdate">Select a date.</string>
    <string name="hint">out of 5</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="allitems">All items</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="footwear">Footwear</string>
    <string name="accessories">Accessories</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feedbackplaystore">Would you like to rate us in the playstore?</string>
    <string name="feedbackemail">Would you like to tell us your feedback?</string>
    <string name="gender">Gender</string>
    <string name="language">Language</string>
    <string name="startintro">This information will help \nus better serve your needs. \nYou can change it anytime \nin Menu - Settings</string>
    <string name="startintroland">This information will help us better serve your needs. \nYou can change it anytime in Menu - Settings</string>
    <string name="getstarted">Get Started</string>
    <string name="helpcloset1">1) In the CLOSET page, select kind and categoy to see your added clothes;</string>
    <string name="helpcloset2">2) To add an item to the closet, click the camera/gallery button on the top right corner to take a picture or upload an image of your clothes;</string>
    <string name="helpcloset3">3) After you upload the image, add attributes (including kind, category, price, season), then click  ADD  button;</string>
    <string name="helpcloset4">4) Now the uploaded image shows up in your closet. Click the image anytime to see clothes details;</string>
    <string name="helpcloset5">5) In the item detail page, click  EDIT  button to edit its attributes.</string>
    <string name="helpcalendar1">1) Click the date in the calendar to see what you have added for that day.</string>
    <string name="helpcalendar2">2) Click ADD button to add clothes for the selected date.</string>
    <string name="helpcalendar3">3) Click the clothes that you want to delete, then click DELETE button, it will be removed from the selected day.</string>
    <string name="helpshop1">1) Shop in Amazon website.</string>
    <string name="helpmenu1">1) Statistics: analyze the closet for you. Get to know the total number and values of your items in each kind and category.</string>
    <string name="helpmenu2">2) Settings: change your language.</string>
    <string name="helpmenu3">3) Feedback: give us your feedback about this app. Thanking you for downloading it again!</string>
    <string name="emailhint">This will be your username in the forum</string>
    <string name="doyouwanttoaddthisitemforthisdate">Do you want to post this item into Forum?</string>
    <string name="pleaseselectanitem">Please select an item.</string>
    <string name="imagealreadyselectedforthisdate">Image already selected for this date</string>
    <string name="savedsuccessfully">Saved successfully</string>
    <string name="notsaved">Not saved!!!</string>
    <string name="deleteitem">Delete item</string>
    <string name="areyousureyouwanttodeletethisitem">Are you sure you want to delete this item?</string>
    <string name="thankyou">Thank you!</string>
    <string name="nomaybelater">No, maybe later.</string>
    <string name="search">Search</string>
    <string name="selectanitemtodeletefromthisdate">Select an item to delete from this date.</string>
    <string name="selectadate">Select a date.</string>
    <string name="whattowear">What to Wear</string>
    <string name="takeaphoto">Take a photo</string>
    <string name="selectfromgallery">Select from gallery</string>

    <string name="shopUrl">http://www.amazon.com</string>

    <string-array name="Kind">
        <item>All</item>
        <item>Top</item>
        <item>Bottom</item>
        <item>Footwear</item>
        <item>Accessories</item>
    </string-array>

    <!-- remove "all" for AddItem and EditItem -->
    <string-array name="Kind_no_all">
        <item>Top</item>
        <item>Bottom</item>
        <item>Footwear</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="Top">
        <item>All</item>
        <item>Blazers and Suiting</item>
        <item>Coats and Jackets</item>
        <item>Dresses</item>
        <item>Shirts</item>
        <item>Sweaters</item>
        <item>Sweatshirts</item>
        <item>T-shirts</item>
    </string-array>

    <string-array name="Top_no_all">
        <item>Blazers and Suiting</item>
        <item>Coats and Jackets</item>
        <item>Dresses</item>
        <item>Shirts</item>
        <item>Sweaters</item>
        <item>Sweatshirts</item>
        <item>T-shirts</item>
    </string-array>

    <string-array name="Bottom">
        <item>All</item>
        <item>Jeans</item>
        <item>Shorts</item>
        <item>Skirts</item>
        <item>Trousers</item>
    </string-array>

    <string-array name="Bottom_no_all">
        <item>Jeans</item>
        <item>Shorts</item>
        <item>Skirts</item>
        <item>Trousers</item>
    </string-array>

    <string-array name="Footwear">
        <item>All</item>
        <item>Athletic</item>
        <item>Boots</item>
        <item>Flats</item>
        <item>Heels</item>
        <item>Sandals</item>
    </string-array>

    <string-array name="Footwear_no_all">
        <item>Athletic</item>
        <item>Boots</item>
        <item>Flats</item>
        <item>Heels</item>
        <item>Sandals</item>
    </string-array>

    <string-array name="Accessories">
        <item>All</item>
        <item>Bags</item>
        <item>Belts</item>
        <item>Gloves</item>
        <item>Hats</item>
        <item>Jewellery</item>
        <item>Scarves</item>
        <item>Socks</item>
        <item>Sunglasses</item>
        <item>Watches</item>
    </string-array>

    <string-array name="Accessories_no_all">
        <item>Bags</item>
        <item>Belts</item>
        <item>Gloves</item>
        <item>Hats</item>
        <item>Jewellery</item>
        <item>Scarves</item>
        <item>Socks</item>
        <item>Sunglasses</item>
        <item>Watches</item>
    </string-array>

    <string-array name="Season">
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>
    </string-array>

    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <string name="set"> Set</string>
    <string name="view">View</string>
    <string name="gender_error">Please select the Gender</string>
    <string name="email_error">Email address is required</string>
    <string name="nodata"> No data to show for this date</string>


    <string name="english">English</string>
    <string name="forum">Forum</string>
    <string name="post">Post</string>
    <string name="uploadsucess">Upload successful</string>
    <string name="addimagedailog">Do you want to add this item for this date?</string>
</resources>
