<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/closet"
            android:icon="@drawable/ic_cloth"
            android:title="@string/closet" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_cart"
            android:title="@string/shop" />
        <item
            android:id="@+id/menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu" />
    </group>

</menu>
